<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray01"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_normal_48"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/btn_libmediacore_test_extract_audio"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_normal_45"
                android:text="@string/lib_media_core_test_extract_audio"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"/>

            <TextView
                android:id="@+id/btn_libmediacore_test_extract_video"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_normal_45"
                android:layout_marginTop="@dimen/margin_normal_20"
                android:text="@string/lib_media_core_test_extract_video"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"/>

            <TextView
                android:id="@+id/btn_libmediacore_test_clipper"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_normal_45"
                android:layout_marginTop="@dimen/margin_normal_20"
                android:text="@string/lib_media_core_test_clipper"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"/>

            <TextView
                android:id="@+id/btn_libmediacore_test_muxer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_normal_45"
                android:layout_marginTop="@dimen/margin_normal_20"
                android:text="@string/lib_media_core_test_muxer"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"/>

            <TextView
                android:id="@+id/btn_libmediacore_test_wav_encoder"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_normal_45"
                android:layout_marginTop="@dimen/margin_normal_20"
                android:text="@string/lib_media_core_test_wav_encoder"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"/>

            <TextView
                android:id="@+id/btn_libmediacore_test_audio_decoder_to_pcm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_normal_45"
                android:layout_marginTop="@dimen/margin_normal_20"
                android:text="@string/lib_media_core_test_decoder_to_pcm"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"/>

            <TextView
                android:id="@+id/btn_libmediacore_test_audio_decoder_to_wav"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_normal_45"
                android:layout_marginTop="@dimen/margin_normal_20"
                android:text="@string/lib_media_core_test_decoder_to_wav"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
