<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray01"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_normal_48"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/btn_goto_video_editor"
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:text="@string/test_module_video_editor"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"/>

            <TextView
                android:id="@+id/btn_goto_test_libmediacore"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_normal_45"
                android:layout_marginTop="@dimen/margin_normal_20"
                android:text="@string/test_lib_media_core"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"/>

            <TextView
                android:id="@+id/btn_goto_test_libaudio"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_normal_45"
                android:layout_marginTop="@dimen/margin_normal_20"
                android:text="@string/test_lib_audio"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
